<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ayaad.ieeemjcet.ics_card"
    tools:showIn="@layout/activity_ics_card">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/icstextcard1"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp"
        app:contentPadding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/icstext1" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/icstextcard2"
        app:cardCornerRadius="20dp"
        android:layout_below="@id/icstextcard1"
        app:cardElevation="7dp"
        app:contentPadding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/icstext2" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/icstextcard3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/icstextcard2"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp"
        app:contentPadding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/icstext3" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/icstextcard4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/icstextcard3"
        android:padding="5dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp"
        app:contentPadding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:autoLink="web"
            android:text="@string/icstext4" />
    </android.support.v7.widget.CardView>


</LinearLayout>


</android.support.v4.widget.NestedScrollView>
