<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ayaad.ieeemjcet.pes_card"
    tools:showIn="@layout/activity_pes_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:id="@+id/pestextcard1"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp"
            app:contentPadding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/pestext1" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:id="@+id/pestextcard2"
            app:cardCornerRadius="20dp"
            android:layout_below="@id/pestextcard1"
            app:cardElevation="7dp"
            app:contentPadding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/pestext2" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/pestextcard3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/pestextcard2"
            android:layout_margin="5dp"
            android:padding="5dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp"
            app:contentPadding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autoLink="web"
                android:text="@string/pestext3" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/pestextcard4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/pestextcard3"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp"
            app:contentPadding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autoLink="web"
                android:text="@string/pestext4" />
        </android.support.v7.widget.CardView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
